[package]
name = "rust-async-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
futures = "0.3"
futures-core = "0.3.21"
futures-util = "0.3.21"
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-codec = "0.1.2"
tokio-stream = "0.1.9"
