[package]
name = "rust-async-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
async-stream = "0.3.3"
bytes = "1.1.0"
futures = "0.3"
futures-core = "0.3.21"
futures-util = "0.3.21"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-codec = "0.1.2"
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["io", "io-util"] }
